# ai-agent-cost-analysis-demo

./: .env.example  README.md  main.py  pyproject.toml
costdemo/: __init__.py  cli.py  costing.py  foundry_client.py  models.py  utils.py
scripts/agent/: agent_cost_summary.py
scripts/analysis/: token_cost_breakdown.py
scripts/pricing/: estimate_from_usage_json.py
scripts/simulation/: chat_history_bloat_simulator.py  circuit_breaker_simulator.py  gemini_model_finder.py  manager_worker_routing_simulator.py  scenario_cost_simulator.py  tool_schema_ab_measurement.py  tool_schema_bloat_simulator.py
