[project]
name = "ai-agent-cost-analysis-demo"
version = "0.1.0"
description = "Minimal Azure Foundry token-usage demo for chat model calls"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "openai>=2.45.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.21",
    "tabulate>=0.10.0",
    "tqdm>=4.68.4",
]

[project.scripts]
agent-cost-summary = "costdemo.cli:main"
